--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "MIT",
   "dependencies": {
     "boom": "^7.3.0",
+    "dotenv": "^8.0.0",
     "fastify": "^2.2.0",
     "fastify-swagger": "^2.3.2"
   },
