--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "lint": "./node_modules/.bin/eslint -c .eslintrc.json src",
     "fix": "./node_modules/.bin/eslint --fix -c .eslintrc.json src",
-    "start": "./node_modules/nodemon/bin/nodemon.js ./src/index.js"
+    "start": "./node_modules/.bin/nodemon --exec babel-node src/index.js",
+    "build": "./node_modules/.bin/babel src --out-dir dist",
+    "serve": "NODE_ENV=production LOG_LEVEL=error node ./dist/index.js"
   },
   "engines": {
     "node": "^10.16.0"
@@ -20,6 +22,12 @@
     "fastify-swagger": "^2.3.2"
   },
   "devDependencies": {
+    "@babel/cli": "^7.4.3",
+    "@babel/core": "^7.4.3",
+    "@babel/node": "^7.2.2",
+    "@babel/plugin-transform-runtime": "^7.4.3",
+    "@babel/preset-env": "^7.4.3",
+    "@babel/runtime": "^7.4.3",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.16.0",
