--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "boom": "^7.3.0",
     "dotenv": "^8.0.0",
     "fastify": "^2.2.0",
-    "fastify-swagger": "^2.3.2"
+    "fastify-swagger": "^2.3.2",
+    "mongoose": "^5.6.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.3",
