--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "boom": "^7.3.0",
     "dotenv": "^8.0.0",
     "fastify": "^2.2.0",
+    "fastify-cors": "^2.1.2",
     "fastify-swagger": "^2.3.2",
     "mongoose": "^5.6.3"
   },
