--- a/package.json
+++ b/package.json
@@ -17,10 +17,9 @@
   "license": "MIT",
   "dependencies": {
     "boom": "^7.3.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.0.0",
-    "fastify": "^2.2.0",
-    "fastify-cors": "^2.1.2",
-    "fastify-swagger": "^2.3.2",
+    "express": "^4.16.4",
     "mongoose": "^5.6.3"
   },
   "devDependencies": {
