--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
-    "mongoose": "^5.6.3"
+    "mongoose": "^5.6.3",
+    "morgan": "^1.9.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.3",
