--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
   "author": "Leonard Henriquez",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "boom": "^7.3.0",
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
     "mongoose": "^5.6.3",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.3",
