--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Leonard Henriquez",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "body-parser": "^1.18.3",
     "boom": "^7.3.0",
     "cors": "^2.8.5",
