--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
   "dependencies": {
     "bcrypt": "^3.0.6",
     "body-parser": "^1.18.3",
-    "boom": "^7.3.0",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
+    "method-override": "^3.0.0",
     "mongoose": "^5.6.3",
     "morgan": "^1.9.1",
     "winston": "^3.2.1"
