--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bcrypt": "^3.0.6",
     "body-parser": "^1.18.3",
     "compression": "^1.7.4",
+    "convict": "^5.0.0",
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
