--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "lint": "./node_modules/.bin/eslint -c .eslintrc.json src",
     "fix": "./node_modules/.bin/eslint --fix -c .eslintrc.json src",
     "test": "./node_modules/.bin/jest",
-    "start": "./node_modules/.bin/nodemon --exec babel-node src/index.js",
+    "start": "./node_modules/.bin/nodemon --exec babel-node src/server.js",
     "build": "./node_modules/.bin/babel src --out-dir dist",
-    "serve": "NODE_ENV=production LOG_LEVEL=error node ./dist/index.js"
+    "serve": "NODE_ENV=production LOG_LEVEL=error node ./dist/server.js"
   },
   "engines": {
     "node": "^10.16.0"
