--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "scripts": {
     "lint": "./node_modules/.bin/eslint -c .eslintrc.json src",
     "fix": "./node_modules/.bin/eslint --fix -c .eslintrc.json src",
-    "test": "./node_modules/.bin/jest",
-    "start": "./node_modules/.bin/nodemon --exec babel-node src/server.js",
+    "test": "./node_modules/.bin/jest -c jest.config.js",
+    "test:watch": "./node_modules/.bin/jest --watch -c jest.config.js",
+    "test:coverage": "./node_modules/.bin/jest --coverage -c jest.config.js",
+    "start": "./node_modules/.bin/nodemon --exec ./node_modules/.bin/babel-node src/server.js",
     "build": "./node_modules/.bin/babel src --out-dir dist",
-    "serve": "NODE_ENV=production LOG_LEVEL=error node ./dist/server.js"
+    "serve": "NODE_ENV=production LOG_LEVEL=error node dist/server.js"
   },
   "engines": {
     "node": "^10.16.0"
@@ -44,6 +46,7 @@
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.16.0",
     "jest": "^24.8.0",
-    "nodemon": "^1.18.10"
+    "nodemon": "^1.18.10",
+    "supertest": "^4.0.2"
   }
 }
