--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "lint": "./node_modules/.bin/eslint -c .eslintrc.json src",
     "fix": "./node_modules/.bin/eslint --fix -c .eslintrc.json src",
+    "test": "./node_modules/.bin/jest",
     "start": "./node_modules/.bin/nodemon --exec babel-node src/index.js",
     "build": "./node_modules/.bin/babel src --out-dir dist",
     "serve": "NODE_ENV=production LOG_LEVEL=error node ./dist/index.js"
@@ -29,18 +30,21 @@
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
+    "supertest": "^4.0.2",
     "winston": "^3.2.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.3",
-    "@babel/core": "^7.4.3",
+    "@babel/core": "^7.5.0",
     "@babel/node": "^7.2.2",
     "@babel/plugin-transform-runtime": "^7.4.3",
-    "@babel/preset-env": "^7.4.3",
+    "@babel/preset-env": "^7.5.0",
     "@babel/runtime": "^7.4.3",
+    "babel-jest": "^24.8.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.16.0",
+    "jest": "^24.8.0",
     "nodemon": "^1.18.10"
   }
 }
