--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "./node_modules/.bin/jest -c jest.config.js",
     "test:watch": "./node_modules/.bin/jest --watch -c jest.config.js",
     "test:coverage": "./node_modules/.bin/jest --coverage -c jest.config.js",
-    "start": "./node_modules/.bin/nodemon --exec babel-node src/server.js",
+    "routes": "./bin/routes",
     "start": "./node_modules/.bin/nodemon --exec ./node_modules/.bin/babel-node src/server.js",
     "build": "./node_modules/.bin/babel src --out-dir dist",
     "serve": "NODE_ENV=production LOG_LEVEL=error node dist/server.js"
