--- a/package.json
+++ b/package.json
@@ -27,14 +27,14 @@
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
+    "express-pino-logger": "^4.0.0",
     "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
     "mongoose": "^5.6.3",
-    "morgan": "^1.9.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
-    "supertest": "^4.0.2",
-    "winston": "^3.2.1"
+    "pino": "^5.12.6",
+    "supertest": "^4.0.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.3",
@@ -49,6 +49,7 @@
     "eslint-plugin-import": "^2.16.0",
     "jest": "^24.8.0",
     "nodemon": "^1.18.10",
+    "pino-pretty": "^3.2.0",
     "supertest": "^4.0.2"
   },
   "browserslist": [
