--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
     "lint:fix": "./node_modules/.bin/eslint --fix -c .eslintrc.json src",
     "test": "./node_modules/.bin/jest -c jest.config.js",
     "test:watch": "./node_modules/.bin/jest --watch -c jest.config.js",
-    "test:coverage": "./node_modules/.bin/jest --coverage -c jest.config.js",
+    "test:coverage": "./node_modules/.bin/jest --coverage -c jest.config.js --detectOpenHandles",
+    "test:coveralls": "./node_modules/.bin/jest --coverage -c jest.config.js --coverageReporters=text-lcov | coveralls",
     "routes": "./bin/routes",
     "start": "./node_modules/.bin/nodemon --exec ./node_modules/.bin/babel-node src/server.js",
     "build": "./node_modules/.bin/babel src --out-dir dist",
     "serve": "NODE_ENV=production LOG_LEVEL=error node dist/server.js"
   },
   "engines": {
-    "node": "^10.16.0"
+    "node": ">=10.16.0"
   },
   "license": "MIT",
   "dependencies": {
@@ -44,6 +45,7 @@
     "@babel/preset-env": "^7.5.0",
     "@babel/runtime": "^7.5.0",
     "babel-jest": "^24.8.0",
+    "coveralls": "^3.0.6",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.16.0",
