--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 
 # Logs
-logs
+logs/*
 *.log
 npm-debug.log*
 yarn-debug.log*
@@ -34,3 +34,6 @@ npm cache directory
 
 # Coverage
 coverage/
+
+# Keep
+!.keep
