--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,12 @@
 {
   "presets": [
+    "@babel/preset-typescript",
     "@babel/preset-env"
   ],
   "plugins": [
-    ["@babel/plugin-transform-runtime",
-    {
-      "regenerator": true
-    }]
+    "@babel/plugin-transform-runtime",
+    "@babel/plugin-transform-typescript",
+    "@babel/proposal-class-properties",
+    "@babel/proposal-object-rest-spread"
   ]
 }
