--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,23 +1,28 @@
 {
+  "parser": "@typescript-eslint/parser",
   "env": {
     "node": true,
     "commonjs": true,
     "jest": true,
     "es6": true
   },
-  "extends": ["airbnb-base"],
+  "plugins": [
+    "@typescript-eslint"
+  ],
+  "extends": [
+    "plugin:@typescript-eslint/recommended", // Uses the recommended rules from the @typescript-eslint/eslint-plugin
+    "prettier/@typescript-eslint", // Uses eslint-config-prettier to disable ESLint rules from @typescript-eslint/eslint-plugin that would conflict with prettier
+    "plugin:prettier/recommended" // Enables eslint-plugin-prettier and displays prettier errors as ESLint errors. Make sure this is always the last configuration in the extends array
+  ],
   "globals": {
     "Atomics": "readonly",
     "SharedArrayBuffer": "readonly"
   },
   "parserOptions": {
-    "ecmaVersion": 2018
+    "ecmaVersion": 2018,
+    "sourceType":  "module"
   },
   "rules": {
-    "no-use-before-define": 0,
-    "consistent-return": 0,
-    "func-names": 0,
-    "no-unused-vars": ["error", { "argsIgnorePattern": "^_" }],
-    "semi": ["error", "never"]
+    "@typescript-eslint/no-use-before-define": 0
   }
 }
