--- a/package.json
+++ b/package.json
@@ -6,15 +6,19 @@
   "main": "src/server.js",
   "private": false,
   "scripts": {
-    "lint": "./node_modules/.bin/eslint -c .eslintrc.json src",
-    "lint:fix": "./node_modules/.bin/eslint --fix -c .eslintrc.json src",
-    "test": "./node_modules/.bin/jest -c jest.config.js",
-    "test:watch": "./node_modules/.bin/jest --watch -c jest.config.js",
-    "test:coverage": "./node_modules/.bin/jest --coverage -c jest.config.js --detectOpenHandles",
-    "test:coveralls": "./node_modules/.bin/jest --coverage -c jest.config.js --coverageReporters=text-lcov | coveralls",
+    "lint": "eslint --ext '.js,.ts' -c .eslintrc.json src",
+    "lint:fix": "eslint --ext '.js,.ts' --fix -c .eslintrc.json src",
+    "test": "jest -c jest.config.js",
+    "test:watch": "jest --watch -c jest.config.js",
+    "test:coverage": "jest --coverage -c jest.config.js --detectOpenHandles",
+    "test:coveralls": "jest --coverage -c jest.config.js --coverageReporters=text-lcov | coveralls",
     "routes": "./bin/routes",
-    "start": "./node_modules/.bin/nodemon --exec ./node_modules/.bin/babel-node src/server.js",
-    "build": "./node_modules/.bin/babel src --out-dir dist",
+    "start": "nodemon --exec babel-node src/server.ts --extensions '.js,.ts'",
+    "type-check": "tsc --noEmit --pretty",
+    "type-check:watch": "yarn run type-check -- --watch",
+    "build": "yarn run type-check && yarn run build:prod",
+    "build:dev": "babel src --out-dir dist --extensions '.js,.ts' --source-maps true",
+    "build:prod": "babel src --out-dir dist --extensions '.js,.ts'",
     "serve": "NODE_ENV=production LOG_LEVEL=error node dist/server.js"
   },
   "engines": {
@@ -41,18 +45,41 @@
     "@babel/cli": "^7.5.0",
     "@babel/core": "^7.5.0",
     "@babel/node": "^7.5.0",
-    "@babel/plugin-transform-runtime": "^7.5.0",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
+    "@babel/plugin-transform-runtime": "^7.6.0",
+    "@babel/plugin-transform-typescript": "^7.6.0",
     "@babel/preset-env": "^7.5.0",
+    "@babel/preset-typescript": "^7.6.0",
     "@babel/runtime": "^7.5.0",
-    "babel-jest": "^24.8.0",
+    "@types/compression": "^1.0.1",
+    "@types/convict": "^4.2.1",
+    "@types/cors": "^2.8.6",
+    "@types/dotenv": "^6.1.1",
+    "@types/express": "^4.17.1",
+    "@types/express-pino-logger": "^4.0.1",
+    "@types/jest": "^24.0.18",
+    "@types/method-override": "^0.0.31",
+    "@types/mongoose": "^5.5.17",
+    "@types/node": "^12.7.5",
+    "@types/passport": "^1.0.1",
+    "@types/passport-jwt": "^3.0.2",
+    "@types/supertest": "^2.0.8",
+    "@typescript-eslint/eslint-plugin": "^2.3.0",
+    "@typescript-eslint/parser": "^2.3.0",
+    "babel-jest": "^24.9.0",
     "coveralls": "^3.0.6",
-    "eslint": "^5.16.0",
+    "eslint": "^6.4.0",
     "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-config-prettier": "^6.3.0",
     "eslint-plugin-import": "^2.16.0",
-    "jest": "^24.8.0",
+    "eslint-plugin-prettier": "^3.1.1",
+    "jest": "^24.9.0",
     "nodemon": "^1.18.10",
     "pino-pretty": "^3.2.0",
-    "supertest": "^4.0.2"
+    "prettier": "^1.18.2",
+    "supertest": "^4.0.2",
+    "typescript": "^3.6.3"
   },
   "browserslist": [
     "node 10.16.0"
@@ -63,6 +90,7 @@
   },
   "keywords": [
     "express",
+    "typescript",
     "node",
     "node.js",
     "mongodb",
