--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "pino": "^5.12.6",
-    "supertest": "^4.0.2"
+    "pino-pretty": "^3.2.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.0",
@@ -70,13 +70,11 @@
     "babel-jest": "^24.9.0",
     "coveralls": "^3.0.6",
     "eslint": "^6.4.0",
-    "eslint-config-airbnb-base": "^13.1.0",
     "eslint-config-prettier": "^6.3.0",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-prettier": "^3.1.1",
     "jest": "^24.9.0",
     "nodemon": "^1.18.10",
-    "pino-pretty": "^3.2.0",
     "prettier": "^1.18.2",
     "supertest": "^4.0.2",
     "typescript": "^3.6.3"
