--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,6 @@
   "parser": "@typescript-eslint/parser",
   "env": {
     "node": true,
-    "commonjs": true,
     "jest": true,
     "es6": true
   },
@@ -10,9 +9,9 @@
     "@typescript-eslint"
   ],
   "extends": [
-    "plugin:@typescript-eslint/recommended", // Uses the recommended rules from the @typescript-eslint/eslint-plugin
-    "prettier/@typescript-eslint", // Uses eslint-config-prettier to disable ESLint rules from @typescript-eslint/eslint-plugin that would conflict with prettier
-    "plugin:prettier/recommended" // Enables eslint-plugin-prettier and displays prettier errors as ESLint errors. Make sure this is always the last configuration in the extends array
+    "plugin:@typescript-eslint/recommended",
+    "prettier/@typescript-eslint",
+    "plugin:prettier/recommended"
   ],
   "globals": {
     "Atomics": "readonly",
