--- a/package.json
+++ b/package.json
@@ -6,19 +6,18 @@
   "main": "src/server.js",
   "private": false,
   "scripts": {
-    "lint": "eslint --ext '.js,.ts' -c .eslintrc.json src",
-    "lint:fix": "eslint --ext '.js,.ts' --fix -c .eslintrc.json src",
-    "test": "jest -c jest.config.js",
-    "test:watch": "jest --watch -c jest.config.js",
-    "test:coverage": "jest --coverage -c jest.config.js --detectOpenHandles",
-    "test:coveralls": "jest --coverage -c jest.config.js --coverageReporters=text-lcov | coveralls",
+    "lint": "eslint --ext '.js,.ts' src",
+    "lint:fix": "eslint --ext '.js,.ts' --fix src",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage --detectOpenHandles",
+    "test:coveralls": "jest --coverage --coverageReporters=text-lcov | coveralls",
     "routes": "./bin/routes",
-    "start": "nodemon --exec babel-node src/server.ts --extensions '.js,.ts'",
+    "start": "nodemon --exec ts-node src/server.ts",
     "type-check": "tsc --noEmit --pretty",
-    "type-check:watch": "yarn run type-check -- --watch",
-    "build": "yarn run type-check && yarn run build:prod",
-    "build:dev": "babel src --out-dir dist --extensions '.js,.ts' --source-maps true",
-    "build:prod": "babel src --out-dir dist --extensions '.js,.ts'",
+    "type-check:watch": "tsc --noEmit --pretty --watch",
+    "build": "tsc --pretty",
+    "build:dev": "tsc --pretty --sourceMap true",
     "serve": "NODE_ENV=production LOG_LEVEL=error node dist/server.js"
   },
   "engines": {
@@ -42,16 +41,6 @@
     "pino-pretty": "^3.2.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.5.0",
-    "@babel/core": "^7.5.0",
-    "@babel/node": "^7.5.0",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
-    "@babel/plugin-transform-runtime": "^7.6.0",
-    "@babel/plugin-transform-typescript": "^7.6.0",
-    "@babel/preset-env": "^7.5.0",
-    "@babel/preset-typescript": "^7.6.0",
-    "@babel/runtime": "^7.5.0",
     "@types/compression": "^1.0.1",
     "@types/convict": "^4.2.1",
     "@types/cors": "^2.8.6",
@@ -67,7 +56,6 @@
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "^2.3.0",
     "@typescript-eslint/parser": "^2.3.0",
-    "babel-jest": "^24.9.0",
     "coveralls": "^3.0.6",
     "eslint": "^6.4.0",
     "eslint-config-prettier": "^6.3.0",
@@ -77,6 +65,8 @@
     "nodemon": "^1.18.10",
     "prettier": "^1.18.2",
     "supertest": "^4.0.2",
+    "ts-jest": "^24.1.0",
+    "ts-node": "^8.4.1",
     "typescript": "^3.6.3"
   },
   "browserslist": [
