--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,27 @@
 {
   "compilerOptions": {
+    // Transpile ts files into js. Needs to be true if using Babel
+    "noEmit": false,
+    // Path where to transpile
+    "outDir": "dist",
+    // Create source map for debugging
     "sourceMap": true,
     // Target latest version of ECMAScript.
     "target": "esnext",
     // Search under node_modules for non-relative imports.
     "moduleResolution": "node",
-    // Process & infer types from .js files.
+    // Process .js files.
     "allowJs": true,
+    // Infer types from js files
     "checkJs": true,
-    // Don't emit; allow Babel to transform files.
-    "noEmit": true,
-    // Enable strictest settings like strictNullChecks & noImplicitAny.
+    // Enable strictest settings
     "strict": true,
+    // No impilicate any
     "noImplicitAny": true,
-    "strictNullChecks": true,
+    // Check nulls
+    "strictNullChecks": false,
     // Disallow features that require cross-file information for emit.
-    "isolatedModules": true,
+    "isolatedModules": false,
     // Import non-ES modules as default imports.
     "esModuleInterop": true
   },
