--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test:coverage": "jest --coverage --detectOpenHandles",
     "test:coveralls": "jest --coverage --coverageReporters=text-lcov | coveralls",
     "routes": "./bin/routes",
-    "start": "nodemon --exec ts-node -r tsconfig-paths/register src/interface/http/server.ts",
+    "start": "TS_NODE_FILES=true nodemon --exec ts-node -r tsconfig-paths/register src/interface/http/server.ts",
     "type-check": "tsc --noEmit --pretty",
     "type-check:watch": "tsc --noEmit --pretty --watch",
     "build": "tsc --pretty",
@@ -31,14 +31,17 @@
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
-    "express-pino-logger": "^4.0.0",
+    "inversify": "^5.0.1",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.15",
     "method-override": "^3.0.0",
     "mongoose": "^5.6.3",
+    "morgan": "^1.9.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "pino": "^5.12.6",
-    "pino-pretty": "^3.2.1"
+    "pino-pretty": "^3.2.1",
+    "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
     "@types/compression": "^1.0.1",
@@ -49,8 +52,9 @@
     "@types/express-pino-logger": "^4.0.1",
     "@types/jest": "^24.0.18",
     "@types/method-override": "^0.0.31",
-    "@types/mongoose": "^5.5.17",
-    "@types/node": "^12.7.5",
+    "@types/mongoose": "^5.5.18",
+    "@types/morgan": "^1.7.37",
+    "@types/node": "^12.7.8",
     "@types/passport": "^1.0.1",
     "@types/passport-jwt": "^3.0.2",
     "@types/supertest": "^2.0.8",
